KhaiCX: fix bug wrap text header of schedule page

--- a/src/main/resources/static/client/css/schedules.css
+++ b/src/main/resources/static/client/css/schedules.css
@@ -16,6 +16,9 @@
     border: 1px solid #dee2e6;
     border-collapse: collapse;
 }
+.table th {
+    white-space: nowrap;
+}
 .table th, td {
     border: none;
 }
